unpackaged/main/default/objects/d_wh__Callout_Retry__c/d_wh__Callout_Retry__c.object-meta.xml
<CustomObject>
    <label>Callout Retry</label>
    <nameField>
        <displayFormat>R-{0000000}</displayFormat>
        <label>Retry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Callout Retries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>