unpackaged/main/default/objects/d_wh__Callout_Retry__c/fields/d_wh__Error__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>