unpackaged/main/default/objects/d_wh__Callout_Retry__c/fields/d_wh__Initial_Log__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Initial_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Log</label>
    <referenceTo>d_wh__Callout_Log__c</referenceTo>
    <relationshipLabel>Callout Retries (Initial Log)</relationshipLabel>
    <relationshipName>Callout_Retries1</relationshipName>
    <type>Lookup</type>
</CustomField>