unpackaged/main/default/objects/d_wh__Callout_Retry__c/fields/d_wh__Log__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Log</label>
    <referenceTo>d_wh__Callout_Log__c</referenceTo>
    <relationshipLabel>Callout Retries</relationshipLabel>
    <relationshipName>Callout_Retries</relationshipName>
    <type>Lookup</type>
</CustomField>