unpackaged/main/default/objects/d_wh__Callout_Retry__c/fields/d_wh__Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Record_Ids__c</fullName>
    <label>Record Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>