unpackaged/main/default/objects/d_wh__Callout_Retry__c/fields/d_wh__Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>d_wh__Scheduled_Time__c</fullName>
    <label>Scheduled Time</label>
    <type>DateTime</type>
</CustomField>