unpackaged/main/default/objects/d_wh__Callout_Retry__c/listViews/d_wh__All.listView-meta.xml
<ListView>
    <fullName>d_wh__All</fullName>
    <columns>NAME</columns>
    <columns>d_wh__Callout_Template__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>d_wh__Status__c</columns>
    <columns>d_wh__Scheduled_Time__c</columns>
    <columns>d_wh__Retry_Number__c</columns>
    <columns>d_wh__Record_Ids__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>